# AI-vocabook

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  word-learning-key.json
backend/: .gitignore  docker-compose.yaml  ormconfig.js  package-lock.json  package.json
backend/python-api/: pyproject.toml
backend/src/: app.module.ts
backend/src/entities/: ocr.entities.ts
backend/src/migration/: 1675837196367-CreateOcr.ts
backend/src/ocr/: DataSource.ts  ocr.controller.ts  ocr.model.ts  ocr.module.ts  ocr.repository.ts  ocr.resolver.ts  ocr.service.ts
backend/src/ocr/dto/: create-ocr.dto.ts
backend/src/orm-api/: orm-api.controller.ts  orm-api.module.ts  orm-api.service.ts
frontend/: package-lock.json  package.json
frontend/pages/: Words.tsx  index.tsx  progress.tsx  study.tsx  words.tsx
frontend/pages/components/: camera.tsx  fileUploadSingle.tsx  footer.tsx  header.tsx  screenSize.tsx  wordCategory.tsx
frontend/pages/home/: index.tsx
frontend/pages/progress/: index.tsx
frontend/pages/study/: index.tsx
frontend/pages/user/: index.tsx
frontend/pages/words/: index.tsx
frontend/styles/: Home.module.css  Home.module.css.map  Home.module.scss  globals.css  globals.css.map  globals.scss
test/vision-api_test/: main.py  ocr-test1.py  pyproject.toml  test.py
